--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+		<img src="../images/logo.png" alt="Про футбол">
 		<div>  <!--Определение--!>	
 		<h1> Футбол - это...</h1>
 				<p class="text">Футбол (от англ. foot — ступня, ball — мяч) — самый популярный командный вид спорта в мире,
