--- a/site2/index.html
+++ b/site2/index.html
@@ -102,8 +102,8 @@
 Первыми правилами, которые дошли до наших дней, считаются правила, которые были разработаны ранее английских, правила разработанные во Флоренции в 1580 году. Согласно этим правилам, команды тогда были «не маленькие» и должны были состоять из 27 игроков: 15-ти нападающих, 5-ти полузащитников, 4-х защитников, 3-х вратарей.
 
 Правила, изданные в 1846 году, ограничивали продолжительность состязания. Согласно им, все игры, в которых не было забито голов, должны были продолжаться не более 3-х дней. В случае же равенства забитых и пропущенных командами мячей, игра должна была быть прекращена через пять дней.</p>
-
 			</div>
+	<img src="../images/logo.png" alt="Про футбол">
 			<a href="https://www.youtube.com/watch?v=caKaW09VzVk"> Смотреть историю про футбол</a>
 		</body>
 	</html>
