--- a/site2/index.html
+++ b/site2/index.html
@@ -103,7 +103,7 @@
 
 Правила, изданные в 1846 году, ограничивали продолжительность состязания. Согласно им, все игры, в которых не было забито голов, должны были продолжаться не более 3-х дней. В случае же равенства забитых и пропущенных командами мячей, игра должна была быть прекращена через пять дней.</p>
 			</div>
-	<img src="../images/logo.png" alt="Про футбол">
+	<img src="../images/logo.jpg" alt="Про футбол">
 			<a href="https://www.youtube.com/watch?v=caKaW09VzVk"> Смотреть историю про футбол</a>
 		</body>
 	</html>
